FlowDemo/main/default/objects/Question_Response__c/fields/Drug__c.field-meta.xml
<CustomField>
    <fullName>Drug__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drug</label>
    <referenceTo>Drug__c</referenceTo>
    <relationshipLabel>Question Responses</relationshipLabel>
    <relationshipName>Question_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>